<resources>
    <string name="app_name">MusicGo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="spotify_text">Spotify</string>
    <string name="apple_music_name_text">Apple Music</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="mgo_title_playlists">Playlists</string>
    <string name="mgo_title_profile">Profile</string>
    <string name="mgo_title_playlist_details">%s Playlist</string>
    <string name="mgo_title_player">Player</string>
    <string name="mgo_create_playlist">Create Playlist</string>
    <string name="title_activity_new_home">NewHomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
